name:                arashi
version:             0.1.0
synopsis:            Helping you survive the internet.

homepage:            https://github.com/heyLu/arashi
license:             MIT
author:              Lucas Stadler
maintainer:          lu@papill0n.org

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable arashi
  main-is:             Arashi/Main.hs

  other-extensions:    OverloadedStrings
  build-depends:
    base,
    feed,
    hedn,
    time,
    old-locale,
    bytestring,
    tagsoup,
    string-conversions,
    uri,
    containers,
    SafeSemaphore,
    blaze-markup,
    blaze-html,
    friendly-time,
    snap-core,
    snap-server,
    transformers,
    utf8-string,
    cmdtheline,
    HTTP
  default-language:    Haskell2010
